--- a/custom_components/futurehome_fimp/manifest.json
+++ b/custom_components/futurehome_fimp/manifest.json
@@ -1,13 +1,14 @@
 {
   "domain": "futurehome_fimp",
   "name": "Futurehome FIMP",
-  "codeowners": [],
+  "codeowners": ["@NickKibish"],
   "config_flow": true,
   "dependencies": ["mqtt"],
-  "documentation": "https://github.com/futurehomeno/fimp-api",
+  "documentation": "https://github.com/NickKibish/HomeAssistant-Futurehome-FIMP",
+  "issue_tracker": "https://github.com/NickKibish/HomeAssistant-Futurehome-FIMP/issues",
   "iot_class": "local_push",
   "requirements": ["paho-mqtt>=1.6.1"],
-  "version": "0.1.0",
+  "version": "1.0.0",
   "zeroconf": [
     {
       "type": "_mqtt._tcp.local.",
